[package]
name = "decrypt-pdf-stream"
version = "0.1.7"
authors = ["Gonzalo <gonzaloburgosdelahera@gmail.com>"]
edition = "2018"
repository = "https://github.com/Ausinero33/decrypt-pdf-stream/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
# default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
md5 = "0.7.0"
hex = "0.4.3"
rc4 = "0.1.0"
aes = "0.8.1"
cbc = "0.1.2"
rand = "0.8.5"
getrandom = {version = "0.2.7", features = ["js"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
